index and logic updated

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -35,7 +35,7 @@
 					aria-controls="profile-tab-pane" aria-selected="false" disabled>Profile</button>
 			</li>
 			<li class="nav-item" role="presentation">
-				<button onClick="myTweet()" class="nav-link" id="my-tweets-tab" data-bs-toggle="tab"
+				<button onClick="myTweets()" class="nav-link" id="my-tweets-tab" data-bs-toggle="tab"
 					data-bs-target="#my-tweets-tab-pane" type="button" role="tab"
 					aria-controls="my-tweets-tab-pane" aria-selected="false" disabled>My
 					Tweets</button>
